<resources>
    <string name="app_name">Zumit</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_signout">Sign out</string>
    <string name="action_account">Account</string>
    <string name="title_activity_pass_view_ride">PassViewRide</string>
    <string name="TimeInViewRide">Time:</string>
    <string name="StartInViewRide">Start:</string>
    <string name="EndInViewRide">End:</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_my_rides" translatable="false">My Rides</string>
    <string name="title_ride_searchresults" translatable="false">Search Results</string>
    <string name="title_authentication" translatable="false">Log in</string>
    <string name="PassViewPass">Passengers</string>
    <string name="LeaveButton">Leave</string>
    <string name="ViewRide">VIEW RIDE</string>
    <string name="startLabel">Address: </string>
    <string name="endLabel">End:</string>
    <string name="timeLabel">Time: </string>
    <string name="passLabel">Joined: </string>
    <string name="title_activity_driver_view_ride">DriverViewRide</string>
    <string name="cancelButton">Cancel</string>
    <string name="joinButton">Join</string>
    <string name="titleLabel">Where would you like to be picked up:</string>
    <string name="_offerRide">Offer</string>
    <string name="_findRide">Search</string>
    <string name="_Start">Start Point</string>
    <string name="_Current">Current Location</string>
    <string name="_End">To: </string>
    <string name="_Submit"><a href="#">Submit</a></string>
    <string name="_Reset"><a href="#">Reset</a></string>
    <string name="RequestLabel">Requests:</string>
    <string name="acceptButton">Accept</string>
    <string name="rejectButton">Reject</string>
    <string name="driverLabel">Driver</string>
    <string name="_Groups">Groups</string>
    <string name="_Events">Events</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="nameText">Name:</string>
    <string name="phoneText">Phone no. :</string>
    <string name="emailText">Email:</string>
    <string name="creditText">Credit:</string>
    <string name="acceptText">Accept</string>
    <string name="rejectText">Reject</string>
    <string name="StartPoint">From:</string>
    <string name="arrivalTime">Arrival time:</string>
    <string name="startTime">Start time:</string>
    <string name="endPoint">To:</string>
    <string name="creator">Creator:</string>
    <string name="seats">Seats:</string>
    <string name="departureText">Pick up address:</string>
    <string name="state">State:</string>
    <string name="suburb">suburb:</string>
    <string name="street">street</string>
    <string name="EditDate">Set DATE</string>
    <string name="ArrivalTime">SET ARRIVAL TIME</string>
    <string name="rideStartTime">SET START TIME</string>
    <string name="comment">Please leave your comment:</string>
    <string name="title_activity_view_group">ViewGroupActivity</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_Profile">Update Profile</string>
    <string name="rateRideString">RATE</string>
    <string name="AboutTheGroup">About the group:</string>
    <string name="rateLabelString">How do you think about this trip?</string>
    <string name="aboutMe">About me:</string>

    <string-array name="seats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="rate_array">
        <item>Bad experience\!\!</item>
        <item>Not good</item>
        <item>It\'s OK</item>
        <item>Pretty good</item>
        <item>I enjoy it\!\!</item>
    </string-array>
</resources>