<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_signout" android:title="@string/action_signout"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_OfferRide" android:title="@string/_offerRide"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_FindRide" android:title="@string/_findRide"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_Groups" android:title="@string/_Groups"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_Events" android:title="@string/_Events"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
