<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swen900014.orange.rideshareoz.views.UserInfoActivity"
    android:id="@+id/userInfoTable">

    <GridLayout
        android:id="@+id/passGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:columnCount="10"
        android:fillViewport="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Name"
            android:id="@+id/startLabel"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:ems="10"
            android:id="@+id/ShowName"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_columnSpan="6"
            android:textColor="#000"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Phone Number"
            android:id="@+id/endPointLabelPass"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:ems="10"
            android:id="@+id/ShowPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            android:textColor="#000"
            android:textAlignment="textStart"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Email"
            android:id="@+id/timeLabel"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:ems="10"
            android:id="@+id/ShowCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/departureText"
            android:id="@+id/startAddressLabel"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Credit"
            android:id="@+id/textView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:ems="10"
            android:id="@+id/ShowEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            android:textColor="#000"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="About Me"
            android:id="@+id/textView3"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|top|center_horizontal"
            android:layout_marginTop="10dp"
            android:singleLine="false"
            android:textColor="#000"/>

        <TextView
            android:ems="10"
            android:id="@+id/startAddressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            android:textColor="#000080"/>


        <TextView
            android:ems="10"
            android:id="@+id/aboutMeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|bottom|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="6"
            android:textColor="#000"/>





        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptText"
            android:id="@+id/acceptButton"
            android:layout_row="14"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_columnSpan="3"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejectText"
            android:id="@+id/rejectButton"
            android:layout_row="14"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_columnSpan="3"
            android:visibility="gone"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rateRideString"
            android:id="@+id/ratePassButton"
            android:onClick="ratePassenger"
            android:layout_row="16"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_columnSpan="3"
            android:visibility="gone"
            android:textColor="#000"/>



        <Spinner
            android:layout_width="161dp"
            android:layout_height="46dp"
            android:id="@+id/spinnerRatePass"
            android:layout_row="15"
            android:layout_column="2"
            android:spinnerMode="dropdown"
            android:layout_gravity="center"
            android:visibility="gone"/>



    </GridLayout>
</ScrollView>